# eagle_mpc_ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
eagle_mpc_2_control/: CMakeLists.txt  package.xml
eagle_mpc_2_control/include/eagle_mpc_2_control/: controller_base.hpp  decentralized_controller.hpp  example_controller.hpp  motor_test.hpp  mpc_runner.hpp  mpc_runner_single.hpp  state_pub_sub.hpp
eagle_mpc_2_control/launch/: mpc_runner_launch.py
eagle_mpc_2_control/src/: controller_base.cpp  decentralized_controller.cpp  motor_test.cpp  mpc_runner.cpp  mpc_runner_single.cpp  state_pub_sub.cpp
eagle_mpc_2_interfaces/: CMakeLists.txt  package.xml
eagle_mpc_2_interfaces/msg/: PlatformState.msg
eagle_mpc_2_interfaces/srv/: MpcControllerTransition.srv
eagle_mpc_2_msgs/: CMakeLists.txt  package.xml
eagle_mpc_bags/: plot_bag.py
include/px4_mpc/: controller_base.hpp  example_controller.hpp  mpc_runner.hpp  offboard_control.hpp
src/: controller_base.cpp  example_controller.cpp  main.cpp  mpc_runner.cpp  offboard_control.cpp
